--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "19.2.3",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
+    "swiper": "^12.0.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
